--- a/spotify/dev.html
+++ b/spotify/dev.html
@@ -1,16 +1,19 @@
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <meta property="og:site_name" content="Spotify">
-    <meta property="og:title" content="Waterworks">
-    <meta property="og:image" content="./assets/images/trepang2.png">
-    <meta property="og:video" content="./assets/sounds/waterworks.mp3">
-    <meta property="og:video:height" content="640">
-    <meta property="og:video:width" content="640">
-    <meta property="og:video:type" content="video/mp4">
-    <meta property="og:type" content="video.other">
-    <meta property="theme-color" content="#1DD65F">
-</head>
+<html lang="en" style="width: 100%; height: 100%;">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <meta property="og:site_name" content="Spotify">
+        <meta property="og:title" content="Waterworks">
+        <meta property="og:image" content="./assets/images/trepang2.png">
+        <meta property="og:video" content="./assets/sounds/waterworks.mp3">
+        <meta property="og:video:secure_url" content="./assets/sounds/waterworks.mp3">
+        <meta property="og:video:height" content="640">
+        <meta property="og:video:width" content="640">
+        <meta property="og:video:type" content="video/mp4">
+        <meta property="og:type" content="video.other">
+        <meta property="theme-color" content="#1DD65F">
+    </head>
 
-<body>
-    <img src="./assets/images/trepang2.png" alt="">
-</body>
+    <body>
+        <img src="./assets/images/trepang2.png" alt="">
+    </body>
+</html>
