--- a/spotify/dev.html
+++ b/spotify/dev.html
@@ -11,6 +11,13 @@
         <meta property="og:video:type" content="video/mp4">
         <meta property="og:type" content="video.other">
         <meta property="theme-color" content="#1DD65F">
+
+        <meta property="twitter:card" content="player">
+        <meta property="twitter:image" content="0">
+        <meta property="twitter:player:stream" content="./assets/sounds/waterworks.mp3">
+        <meta property="twitter:player:stream:content_type" content="audio/mp3">
+        <meta property="twitter:player:height" content="640">
+        <meta property="twitter:player:width" content="640">
     </head>
 
     <body>
