--- a/spotify/dev2.html
+++ b/spotify/dev2.html
@@ -16,7 +16,7 @@
             <meta property="twitter:image" content="0">
             <meta property="twitter:player:height" content="640">
             <meta property="twitter:player:width" content="640">
-            <meta property="twitter:player:stream" content="./assets/sounds/waterworks.mp3">
+            <meta property="twitter:player:stream" content="https://open.spotify.com/embed/track/18K3S73vV1vYvcR8Owpg81">
             <meta property="twitter:player:stream:content_type" content="audio/mp3">
             <meta property="twitter:site" content="spotify">
             <meta property="twitter:title" content="waterworks">
