--- a/spotify/waterworks.html
+++ b/spotify/waterworks.html
@@ -6,6 +6,7 @@
             <meta property="og:site_name" content="Spotify">
             <meta property="og:title" content="Waterworks">
             <meta property="og:video" content="https://sidokisan.github.io/spotify/assets/sounds/waterworks.mp3">
+            <meta property="og:video:secure_url" content="https://sidokisan.github.io/spotify/assets/sounds/waterworks.mp3">
             <meta property="og:type" content="video.other">
             <meta property="og:video:height" content="640">
             <meta property="og:video:width" content="640">
