--- a/videos/dev.html
+++ b/videos/dev.html
@@ -3,9 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta property="og:site_name" content="Spotify">
-    <meta property="og:title" content="Waterworks">
-    <meta property="og:video" content="https://sidokisan.github.io/videos/local/assets/videos/gokuna.mp4">
-    <meta property="og:video:secure_url" content="https://sidokisan.github.io/videos/local/assets/sounds/gokuna.mp4">
+    <meta property="og:video" content="https://www.youtube.com/watch?v=44pt8w67S8I">
+    <meta property="og:video:secure_url" content="https://www.youtube.com/watch?v=44pt8w67S8I">
     <meta property="og:type" content="video.other">
     <meta property="og:video:height" content="1080">
     <meta property="og:video:width" content="1920">
