--- a/videos/dev.html
+++ b/videos/dev.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta property="og:site_name" content="Spotify">
+    <meta property="og:title" content="Gokuna">
     <meta property="og:video" content="https://www.youtube.com/watch?v=44pt8w67S8I">
     <meta property="og:video:secure_url" content="https://www.youtube.com/watch?v=44pt8w67S8I">
     <meta property="og:type" content="video.other">
